tests/characterization/snapshots/characterization__init__init_download_failure.snap
---
source: tests/characterization/init.rs
expression: "format!(\"{}--- target tree ---\\n{}\", context.render_output(&output),\ncontext.render_tree(\"demo\"))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: failed to download backend template archive (branch 'main' may not exist).
--- end ---
--- target tree ---
<EMPTY>
