tests/characterization/snapshots/characterization__init__init_unknown_template.snap
---
source: tests/characterization/init.rs
expression: context.render_output(&output)
---
exit: 1
--- stdout ---
--- stderr ---
Error: template 'unknown' is not implemented.
--- end ---
